still trying to fix flicker

--- a/assets/css/Animated-Text-Background.css
+++ b/assets/css/Animated-Text-Background.css
@@ -5,12 +5,12 @@
 }
 
 #animatedTextHeading {
-  
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
   -webkit-background-origin: padding-box;
   font-size: 16vmax;
   transform: translate3d(0,0,0);
+  backface-visibility: hidden;
   line-height: .8em;
   will-change: transform, opacity;
   letter-spacing: -1vmax;
